fix default details marker visible in Safari

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -354,6 +354,7 @@ summary.no-decoration
 summary.no-decoration::marker
 summary.no-decoration::-webkit-details-marker
     content: none
+    display: none
 
 // Milkdown markdown content
 
